fix: fixed dark mode issues in release grade page

--- a/src/main/webapp/assets/css/create.css
+++ b/src/main/webapp/assets/css/create.css
@@ -536,11 +536,12 @@ textarea{
 }
 #obs{
     background-color: var(--surface-color);
+    color: var(--text-color)!important;
 }
 #obs:focus{
     outline: none;
     border: 2px solid var(--border-color);
 }
-.head-title{
-    color: var(--text-color);
+.title-grade{
+    color: var(--text-color)!important;
 }
